# gl-triforce

./: .gitignore  CMakeLists.txt  README.md  triforce.cpp  vcpkg.json
.github/workflows/: cd.yml
inc/: GLFunctions.h
src/: main-sdl2.cpp  main-sdl3.cpp  main.cpp
